tests/cases/errors/compile_extra_tokens.lox
// Trailing tokens after a valid expression.
// expect compile error: Expect end of expression
1 + 2 3
